kustomize/step-20/smcp-bookinfo/smcp_bookinfo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smcp-bookinfo
spec:
  finalizers:
  - kubernetes
